--- a/rebar.config
+++ b/rebar.config
@@ -6,8 +6,7 @@
 {eunit_opts, [verbose, {skip_deps, true}, {report,{eunit_surefire,[{dir,"."}]}}]}.
 {deps, [
   {edown, ".*", {git, "https://github.com/uwiger/edown.git", "HEAD"}},
-  {jsx, ".*", {git, "https://github.com/talentdeficit/jsx.git", {tag, "v2.5.2"}}},
-  {uuid, ".*", {git, "https://github.com/travis/erlang-uuid.git", "HEAD"}}
+  {jsx, ".*", {git, "https://github.com/talentdeficit/jsx.git", {tag, "v2.5.2"}}}
 ]}.
 {edoc_opts, [{doclet, edown_doclet},
              {src_path, ["src/"]},
