--- a/rebar.config
+++ b/rebar.config
@@ -1,16 +1,66 @@
-%% -*- erlang -*-
-{erl_opts, [fail_on_warning, debug_info]}.
-{cover_enabled, true}.
-{clean_files, ["*.eunit", "ebin/*.beam"]}.
-{eunit_exclude_deps, true}.
-{eunit_opts, [verbose, {skip_deps, true}, {report,{eunit_surefire,[{dir,"."}]}}]}.
+{erl_opts, [debug_info, warn_export_vars, warn_shadow_vars, warn_obsolete_guard]}.
+
+{plugins, [
+           {rebar3_elixir, "~> 0.2.1"},
+           rebar3_hex,
+           rebar3_lint
+          ]}.
+{elixir_bindings, [conserl]}.
+
 {deps, [
-  {edown, ".*", {git, "https://github.com/uwiger/edown.git", "HEAD"}},
-  {jsx, ".*", {git, "https://github.com/talentdeficit/jsx.git", {tag, "v2.5.2"}}}
-]}.
-{edoc_opts, [{doclet, edown_doclet},
-             {src_path, ["src/"]},
-             {stylesheet, ""},
-             {image, ""},
-             {top_level_readme, {"./README.md", "https://github.com/gmr/conserl"}},
-             {subpackages, true}]}.
+        {jsx, "~> 2.8"}
+       ]}.
+
+{eunit_opts, [no_tty, {report, {unite_compact, [profile]}}]}.
+{cover_enabled, true}.
+
+{profiles, [
+            {test, [
+                    {deps, [
+                            {unite, "", {git, "git://github.com/basho/unite.git"}}
+                           ]}
+                   ]},
+            {docs, [
+                    {deps, [
+                            {edown, {git, "https://github.com/botsunit/edown.git", {branch, "master"}}}
+                           ]},
+                    {edoc_opts, [
+                                 {doclet, edown_doclet}
+                                 , {app_default, "http://www.erlang.org/doc/man"}
+                                 , {source_path, ["src"]}
+                                 , {overview, "overview.edoc"}
+                                 , {stylesheet, ""}
+                                 , {image, ""}
+                                 , {top_level_readme, {"./README.md", "https://github.com/botsunit/doteki"}}
+                                ]}
+                   ]}
+           ]}.
+
+{elvis,
+   [#{dirs => ["src", "test"],
+      filter => "*.erl",
+      rules => [{elvis_style, line_length, #{limit => 180}},
+                {elvis_style, no_tabs},
+                {elvis_style, no_trailing_whitespace},
+                {elvis_style, macro_names},
+                {elvis_style, macro_module_names},
+                {elvis_style, dont_repeat_yourself, #{min_complexity => 25}},
+                {elvis_style, operator_spaces, #{rules => [{right, ","},
+                                                           {right, "++"},
+                                                           {left, "++"}]}}]},
+    #{dirs => ["."],
+      filter => "rebar.config",
+      rules => [{elvis_project, no_deps_master_rebar, []}]}]}.
+
+{xref_warnings, false}.
+{xref_extra_paths, []}.
+{xref_ignores, [{metrics, backend, 0}, {metrics, new, 2}, {metrics, update, 2}, {metrics, delete, 1}]}.
+{xref_checks, [undefined_function_calls
+               , undefined_functions
+               , locals_not_used
+%               , exports_not_used
+               , deprecated_function_calls
+               , deprecated_functions]}.
+
+{dialyzer, [{plt_prefix, "conserl"}]}.
+
