--- a/rebar.config
+++ b/rebar.config
@@ -8,6 +8,8 @@
 {elixir_bindings, [conserl]}.
 
 {deps, [
+        {lager, "~> 3.5.1"},
+        {doteki, "~> 1.0"},
         {jsx, "~> 2.8"}
        ]}.
 
@@ -31,7 +33,7 @@
                                  , {overview, "overview.edoc"}
                                  , {stylesheet, ""}
                                  , {image, ""}
-                                 , {top_level_readme, {"./README.md", "https://github.com/botsunit/doteki"}}
+                                 , {top_level_readme, {"./README.md", "https://github.com/G-Corp/conserl"}}
                                 ]}
                    ]}
            ]}.
