--- a/rebar.config
+++ b/rebar.config
@@ -5,11 +5,21 @@
            rebar3_hex,
            rebar3_lint
           ]}.
-{elixir_bindings, [conserl]}.
+{elixir_bindings, [
+                   {conserl, [{except, [start_link
+                                        , init
+                                        , handle_call
+                                        , handle_cast
+                                        , handle_info
+                                        , terminate
+                                        , code_change]}]}
+                   , {conserl_catalog, [{as, "Conserl.Catalog"}]}
+                   , {conserl_kv, [{as, "Conserl.KV"}]}
+                  ]}.
 
 {deps, [
         {lager, "~> 3.5.1"},
-        {doteki, "~> 1.0"},
+        {bucs, "~> 1.0.12"},
         {jsx, "~> 2.8"}
        ]}.
 
